@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-04
+2013-03-01 Mikhail S. Dubrovin
+- in CSPadCalibPars add beam_vector and beam_intersect types
+	
 Tag: V00-01-03
 2012-05-10 Mikhail S. Dubrovin
 - in CSPadCalibPars.cpp 
